# oc-sso-login-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: clippy.yml  rustfmt.yml
src/: cli.rs  config.rs  main.rs  oauth.rs
