[package]
name = "oc-sso-login-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
directories = "5.0.1"
domain = { version = "0.10.3", features = ["resolv-sync"] }
env_logger = "0.11.6"
jsonwebtoken = { version = "9.3.0", default-features = false }
log = "0.4.22"
oauth2 = { version = "5.0.0-rc.1", features = ["reqwest-blocking"] }
reqwest = "0.12.9"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
